# gun

./: AGENTS.md  Bash.toml  Cargo.toml  LICENSE  README.md  SECURITY.md  bin  bin.sh  file.txt  logs.sh  logs.txt  work.txt
.github/workflows/: ci.yaml
core/: base.sh  mod.sh  parse.sh  utils.sh
core/app/: base.sh  mod.sh
core/context/: base.sh  hook.sh  mod.sh  temp.sh
core/network/: mod.sh
core/parse/: base.sh  mod.sh
core/system/: mod.sh
core/tool/: map.sh  mod.sh  path.sh  process.sh
initial/: installer.sh  loader.sh
manager/: run.sh
module/cmds/: build.sh  clean.sh  install.sh  run.sh  test.sh  update.sh
module/gates/: audit.sh  build.sh  clean.sh  coverage.sh  format.sh  lint.sh  quality.sh  run.sh  security.sh  semver.sh  test.sh
module/git/: base.sh  index.sh
module/github/: base.sh  index.sh
module/notify/: base.sh  index.sh
module/scaffold/: base.sh  index.sh
module/storage/: base.sh  index.sh
module/test/: base.sh  index.sh
module/user/: index.sh
src/: main.rs  main.sh  test.rs
src/core/: error.rs  mod.rs  mod.sh
src/core/app/: arch.rs  env.sh  error.rs  log.sh  mod.rs  mod.sh  read.sh  run.sh
src/core/context/: facade.sh  mod.sh
src/core/error/: base.rs  mod.rs
src/core/file/: arch.rs  base.rs  dir.rs  file.rs  mod.rs  mod.sh  path.rs
src/core/graph/: arch.rs  base.rs  mod.rs  tree.rs
src/core/manager/: arch.rs  base.rs  context.rs  error.rs  index.rs  info.rs  install.rs  mod.rs  path.rs  public.rs  run.rs  service.rs  spec.rs  tool.rs  tree.rs  work.rs
src/core/network/: mod.sh
src/core/parse/: facade.sh  mod.sh
src/core/process/: mod.rs  process.rs
src/core/service/: arch.rs  context.rs  (+9 more)
src/module/: mod.sh
template-new/base/: .gitignore  .golangci.yml  .phpstan.neon  .ruff-lint.toml  .syft.yml  .trivy.yml
template/base/: .biome-fmt.json  .biome-lint.json  .gitignore  .gitleaks.toml  .pint.json  .pyrightconfig.json  .ruff-fmt.toml  .typos.toml
template/django/: manage.py
template/fastapi/: main.py
template/flask/: app.py
template/go-lib/: go.mod
template/go-ws/: go.work
template/lib/rust/: Cargo.toml
template/python-lib/: pyproject.toml
template/python-ws/: pyproject.toml
tool/: run.sh
tool/parts/: builtin.sh  tail.sh  test.sh  trace.sh
tool/src/: base.sh  checksum.sh  extract.sh  merge.sh  meta.sh
(+246 files in other folders)
