[package]
name = "demo"
version = "0.1.0"
edition = "2021"
rust-version = "1.90"
license = "MIT OR Apache-2.0"
description = "this is demo crate"
categories = ["development-tools"]
keywords = ["demo"]
authors = ["user"]

[dependencies]

[dev-dependencies]
criterion = "0.8.1"
libfuzzer-sys = "0.4.10"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "thin"
panic = "abort"
strip = "symbols"
debug = 0
debug-assertions = false
overflow-checks = false
incremental = false

[profile.release-fat]
inherits = "release"
lto = "fat"

[profile.release.build-override]
opt-level = 0
codegen-units = 256
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
